created socials and fixed doc bags
