# app/Models/Social.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Social extends Model
+{
+    use HasFactory;
+
+    /**
+     * @var string[] $fillable
+     */
+    protected $fillable = [
+        'slug',
+        'link',
+        'is_active',
+        'position',
+    ];
+
+    /**
+     * @var string[] $casts
+     */
+    protected $casts = [
+        'created_at' => 'datetime:d-m-Y H:i:s',
+        'updated_at' => 'datetime:d-m-Y H:i:s',
+    ];
+}
